examples/legacy/invalid_scl/type_error_not.scl
rel S() :- !(1 + 2)
rel S() :- !"adsf"

rel OK() :- !(1 == 2)
